--- a/docker/Dockerfile-backend
+++ b/docker/Dockerfile-backend
@@ -13,7 +13,7 @@ WORKDIR /root/mavsdk
 
 COPY . .
 
-RUN make BUILD_BACKEND=YES INSTALL_PREFIX=/root/dcsdk_install default install
+RUN make BUILD_MAVSDK_SERVER=YES INSTALL_PREFIX=/root/dcsdk_install default install
 
 FROM alpine:3.8
 
@@ -23,7 +23,7 @@ RUN apk add libcurl \
             libstdc++
 
 COPY --from=builder /root/dcsdk_install /usr/local
-COPY --from=builder /root/mavsdk/build/default/backend/src/backend_bin /root/backend_bin
+COPY --from=builder /root/mavsdk/build/default/mavsdk_server/src/mavsdk_server_bin /root/mavsdk_server_bin
 
 EXPOSE 14540/udp
-ENTRYPOINT /root/backend_bin
+ENTRYPOINT /root/mavsdk_server_bin
