--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -263,9 +263,6 @@ jobs:
   dockcross-manylinux2010-x64:
     name: manylinux2010-x64
     runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        arch_name: [manylinux2010-x64]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -273,49 +270,15 @@ jobs:
       - uses: actions/cache@v2
         id: cache
         with:
-          path: ./build/${{ matrix.arch_name }}/third_party/install
-          key: ${{ github.job }}-${{ matrix.arch_name }}-${{ hashFiles('./third_party/**') }}
+          path: ./build/manylinux2010-x64/third_party/install
+          key: ${{ github.job }}-${{ hashFiles('./third_party/**') }}
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=/work/build/${{ matrix.arch_name }}/third_party/install" >> $GITHUB_ENV
       - name: setup dockcross
-        run: docker run --rm dockcross/${{ matrix.arch_name }} > ./dockcross-${{ matrix.arch_name }}; chmod +x ./dockcross-${{ matrix.arch_name }}
+        run: docker run --rm dockcross/manylinux2010-x64 > ./dockcross-manylinux2010-x64; chmod +x ./dockcross-manylinux2010-x64
       - name: configure
-        run: ./dockcross-${{ matrix.arch_name }} cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/${{ matrix.arch_name }}/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/${{ matrix.arch_name }} -H.
-      - name: build
-        run: ./dockcross-${{ matrix.arch_name }} cmake --build build/${{ matrix.arch_name }} -j 2 --target install
-      - name: Publish artefacts
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: svenstaro/upload-release-action@v1-release
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/${{ matrix.arch_name }}/install/bin/mavsdk_server'
-          asset_name: 'mavsdk_server_${{ matrix.arch_name }}'
-          tag: ${{ github.ref }}
-          overwrite: true
-
-  dockcross-linux-musl:
-    name: ${{ matrix.arch_name }}
-    runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        arch_name: [linux-armv7l-musl, linux-arm64-musl]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: setup dockcross
-        run: docker run --rm dockcross/${{ matrix.arch_name }} > ./dockcross-${{ matrix.arch_name }}; chmod +x ./dockcross-${{ matrix.arch_name }}
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: ./build/${{ matrix.arch_name }}/third_party/install
-          key: ${{ github.job }}-${{ matrix.arch_name }}-${{ hashFiles('./third_party/**') }}
-      - name: disable superbuild on cache hit
-        if: steps.cache.outputs.cache-hit == 'true'
-        run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=/work/build/${{ matrix.arch_name }}/third_party/install" >> $GITHUB_ENV
-      - name: configure
-        run: ./dockcross-${{ matrix.arch_name }} cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/${{ matrix.arch_name }}/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DWERROR=OFF -j 2 -Bbuild/${{ matrix.arch_name }} -H.
+        run: ./dockcross-manylinux2010-x64 cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/manylinux2010-x64/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/manylinux2010-x64 -H.
       - name: build
         run: ./dockcross-manylinux2010-x64 cmake --build build/manylinux2010-x64 -j 2 --target install
       - name: Publish artefacts
@@ -328,75 +291,49 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
 
-  dockcross-manylinux2014-aarch64:
-    name: manylinux2014-aarch64
+  dockcross-linux-armv7l-musl:
+    name: linux-armv7l-musl
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
         with:
           submodules: recursive
       - name: setup dockcross
-        run: docker run --rm dockcross/manylinux2014-aarch64 > ./dockcross-manylinux2014-aarch64; chmod +x ./dockcross-manylinux2014-aarch64
+        run: docker run --rm dockcross/linux-armv7l-musl > ./dockcross-linux-armv7l-musl; chmod +x ./dockcross-linux-armv7l-musl
       - name: configure
-        run: ./dockcross-manylinux2014-aarch64 /bin/bash -c 'OPENSSL_PLATFORM=linux-aarch64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/manylinux2014-aarch64/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/manylinux2014-aarch64 -H.'
+        run: ./dockcross-linux-armv7l-musl /bin/bash -c 'OPENSSL_PLATFORM=linux-armv4 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-armv7l-musl/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DWERROR=OFF -j 2 -Bbuild/linux-armv7l-musl -H.'
       - name: build
-        run: ./dockcross-manylinux2014-aarch64 cmake --build build/manylinux2014-aarch64 -j 2 --target install
+        run: ./dockcross-linux-armv7l-musl cmake --build build/linux-armv7l-musl -j 2 --target install
       - name: Publish artefacts
         if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/manylinux2014-aarch64/install/bin/mavsdk_server'
-          asset_name: 'mavsdk_server_manylinux2014-aarch64'
+          file: 'build/linux-armv7l-musl/install/bin/mavsdk_server'
+          asset_name: 'mavsdk_server_linux-armv7l-musl'
           tag: ${{ github.ref }}
           overwrite: true
 
-  dockcross-linux-arm64:
-    name: linux-arm64
+  dockcross-linux-musl:
+    name: linux-arm64-musl
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
         with:
           submodules: recursive
       - name: setup dockcross
-        run: docker run --rm dockcross/linux-arm64 > ./dockcross-linux-arm64; chmod +x ./dockcross-linux-arm64
+        run: docker run --rm dockcross/linux-arm64-musl > ./dockcross-linux-arm64-musl; chmod +x ./dockcross-linux-arm64-musl
       - name: configure
-        run: ./dockcross-linux-arm64 /bin/bash -c 'OPENSSL_PLATFORM=linux-aarch64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-arm64/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/linux-arm64 -H.'
+        run: ./dockcross-linux-arm64-musl /bin/bash -c 'OPENSSL_PLATFORM=linux-aarch64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-arm64-musl/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DWERROR=OFF -j 2 -Bbuild/linux-arm64-musl -H.'
       - name: build
-        run: ./dockcross-linux-arm64 cmake --build build/linux-arm64 -j 2 --target install
+        run: ./dockcross-linux-arm64-musl cmake --build build/linux-arm64-musl -j 2 --target install
       - name: Publish artefacts
         if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/linux-arm64/install/bin/mavsdk_server'
-          asset_name: 'mavsdk_server_linux-arm64'
-          tag: ${{ github.ref }}
-          overwrite: true
-
-  dockcross-linux-arm:
-    name: ${{ matrix.arch_name }}
-    runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        arch_name: [linux-armv6, linux-armv7]
-    steps:
-      - uses: actions/checkout@v1
-        with:
-          submodules: recursive
-      - name: setup dockcross
-        run: docker run --rm dockcross/${{ matrix.arch_name }} > ./dockcross-${{ matrix.arch_name }}; chmod +x ./dockcross-${{ matrix.arch_name }}
-      - name: configure
-        run: ./dockcross-${{ matrix.arch_name }} /bin/bash -c 'OPENSSL_PLATFORM=linux-armv4 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/${{ matrix.arch_name }}/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/${{ matrix.arch_name }} -H.'
-      - name: build
-        run: ./dockcross-${{ matrix.arch_name }} cmake --build build/${{ matrix.arch_name }} -j 2 --target install
-      - name: Publish artefacts
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: svenstaro/upload-release-action@v1-release
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/${{ matrix.arch_name }}/install/bin/mavsdk_server'
-          asset_name: 'mavsdk_server_${{ matrix.arch_name }}'
+          file: 'build/linux-arm64-musl/install/bin/mavsdk_server'
+          asset_name: 'mavsdk_server_linux-arm64-musl'
           tag: ${{ github.ref }}
           overwrite: true
 
