docker: add missing perl module for openssl config

--- a/docker/Dockerfile-Fedora-32
+++ b/docker/Dockerfile-Fedora-32
@@ -24,6 +24,7 @@ RUN dnf -y install \
     libtool \
     make \
     ninja-build \
+    perl-FindBin \
     python \
     redhat-rpm-config \
     rpm-build \
