--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "mavsdk-proto"]
 	path = proto
 	url = https://github.com/mavlink/MAVSDK-Proto.git
+[submodule "pymavsdk/pybind"]
+	path = mavsdk-python2/pybind11
+	url = https://github.com/pybind/pybind11.git
