Fix github workflow after rebase

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -301,7 +301,7 @@ jobs:
       - name: setup dockcross
         run: docker run --rm dockcross/linux-armv7l-musl > ./dockcross-linux-armv7l-musl; chmod +x ./dockcross-linux-armv7l-musl
       - name: configure
-        run: ./dockcross-linux-armv7l-musl /bin/bash -c 'OPENSSL_PLATFORM=linux-armv4 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-armv7l-musl/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DWERROR=OFF -j 2 -Bbuild/linux-armv7l-musl -H.'
+        run: ./dockcross-linux-armv7l-musl /bin/bash -c 'OPENSSL_PLATFORM=linux-armv4 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-armv7l-musl/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DWERROR=OFF -j 2 -Bbuild/linux-armv7l-musl -H.'
       - name: build
         run: ./dockcross-linux-armv7l-musl cmake --build build/linux-armv7l-musl -j 2 --target install
       - name: Publish artefacts
@@ -324,7 +324,7 @@ jobs:
       - name: setup dockcross
         run: docker run --rm dockcross/linux-arm64-musl > ./dockcross-linux-arm64-musl; chmod +x ./dockcross-linux-arm64-musl
       - name: configure
-        run: ./dockcross-linux-arm64-musl /bin/bash -c 'OPENSSL_PLATFORM=linux-aarch64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-arm64-musl/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DWERROR=OFF -j 2 -Bbuild/linux-arm64-musl -H.'
+        run: ./dockcross-linux-arm64-musl /bin/bash -c 'OPENSSL_PLATFORM=linux-aarch64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-arm64-musl/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DWERROR=OFF -j 2 -Bbuild/linux-arm64-musl -H.'
       - name: build
         run: ./dockcross-linux-arm64-musl cmake --build build/linux-arm64-musl -j 2 --target install
       - name: Publish artefacts
