--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,7 +143,7 @@ jobs:
     container: alpine:3.11.6
     steps:
       - name: install tools
-        run: apk update && apk add build-base cmake git linux-headers
+        run: apk update && apk add build-base cmake git linux-headers tar
       - uses: actions/checkout@v2
         with:
           submodules: recursive
