--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,7 +101,7 @@ jobs:
           submodules: recursive
       - name: install clang-format
         run: sudo apt-get update && sudo apt-get install -y clang-format-10
-      - name: install dcsdkgen
+      - name: install protoc-gen-mavsdk
         run: |
              cd proto/pb_plugins
              pip3 install --user -r requirements.txt
