--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,73 +137,6 @@ jobs:
       - name: check docs
         run: tools/generate_docs.sh
 
-  alpine-linux:
-    name: alpine 3.11.6 (musl)
-    runs-on: ubuntu-18.04
-    container: alpine:3.11.6
-    steps:
-      - name: install tools
-        run: apk update && apk add build-base cmake git linux-headers perl tar
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: ./build/release/third_party/install
-          key: ${{ github.job }}-${{ hashFiles('./third_party/**') }}
-      - name: disable superbuild on cache hit
-        if: steps.cache.outputs.cache-hit == 'true'
-        run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/release/third_party/install" >> $GITHUB_ENV
-      - name: configure
-        run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DCMAKE_INSTALL_PREFIX=install -DWERROR=OFF -j 2 -Bbuild/release -H.
-      - name: build
-        run: cmake --build build/release --target install -- -j2
-      - name: test
-        run: ./build/release/src/unit_tests_runner
-      - name: test (mavsdk_server)
-        run: ./build/release/src/mavsdk_server/test/unit_tests_mavsdk_server
-      - name: Check the artifact
-        run: |
-          file "./install/bin/mavsdk_server"
-      - name: Publish artefacts
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: svenstaro/upload-release-action@v1-release
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'install/bin/mavsdk_server'
-          asset_name: 'mavsdk_server_musl_x86_64'
-          tag: ${{ github.ref }}
-          overwrite: true
-
-  px4-sitl-older:
-    name: PX4 SITL ${{ matrix.px4_version }} (ubuntu-18.04)
-    runs-on: ubuntu-18.04
-    container: mavsdk/mavsdk-ubuntu-18.04-px4-sitl-${{ matrix.px4_version }}
-    strategy:
-      matrix:
-        px4_version: [v1.9, v1.10]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: test
-        run: PX4_VERSION=${{ matrix.px4_version }} tools/run-sitl-tests.sh /home/user/Firmware
-
-  px4-sitl-newer:
-    name: PX4 SITL ${{ matrix.px4_version }} (ubuntu-20.04)
-    runs-on: ubuntu-18.04
-    container: mavsdk/mavsdk-ubuntu-20.04-px4-sitl-${{ matrix.px4_version }}
-    strategy:
-      matrix:
-        px4_version: [v1.11]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: test
-        run: PX4_VERSION=${{ matrix.px4_version }} tools/run-sitl-tests.sh /home/user/Firmware
-
   deb-package:
     name: ${{ matrix.container_name }} (package, non-mavsdk_server)
     runs-on: ubuntu-18.04
@@ -291,6 +224,45 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
 
+  alpine-linux:
+    name: alpine 3.11.6 (musl)
+    runs-on: ubuntu-18.04
+    container: alpine:3.11.6
+    steps:
+      - name: install tools
+        run: apk update && apk add build-base cmake git linux-headers perl tar
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - uses: actions/cache@v2
+        id: cache
+        with:
+          path: ./build/release/third_party/install
+          key: ${{ github.job }}-${{ hashFiles('./third_party/**') }}
+      - name: disable superbuild on cache hit
+        if: steps.cache.outputs.cache-hit == 'true'
+        run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/release/third_party/install" >> $GITHUB_ENV
+      - name: configure
+        run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DCMAKE_INSTALL_PREFIX=install -DWERROR=OFF -j 2 -Bbuild/release -H.
+      - name: build
+        run: cmake --build build/release --target install -- -j2
+      - name: test
+        run: ./build/release/src/unit_tests_runner
+      - name: test (mavsdk_server)
+        run: ./build/release/src/mavsdk_server/test/unit_tests_mavsdk_server
+      - name: Check the artifact
+        run: |
+          file "./install/bin/mavsdk_server"
+      - name: Publish artefacts
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: svenstaro/upload-release-action@v1-release
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: 'install/bin/mavsdk_server'
+          asset_name: 'mavsdk_server_musl_x86_64'
+          tag: ${{ github.ref }}
+          overwrite: true
+
   dockcross-linux-armv7l-musl:
     name: linux-armv7l-musl
     runs-on: ubuntu-18.04
@@ -314,7 +286,7 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
 
-  dockcross-linux-musl:
+  dockcross-linux-arm64-musl:
     name: linux-arm64-musl
     runs-on: ubuntu-18.04
     steps:
@@ -609,3 +581,31 @@ jobs:
           asset_name: 'mavsdk_server_win32.exe'
           tag: ${{ github.ref }}
           overwrite: true
+
+  px4-sitl-older:
+    name: PX4 SITL ${{ matrix.px4_version }} (ubuntu-18.04)
+    runs-on: ubuntu-18.04
+    container: mavsdk/mavsdk-ubuntu-18.04-px4-sitl-${{ matrix.px4_version }}
+    strategy:
+      matrix:
+        px4_version: [v1.9, v1.10]
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: test
+        run: PX4_VERSION=${{ matrix.px4_version }} tools/run-sitl-tests.sh /home/user/Firmware
+
+  px4-sitl-newer:
+    name: PX4 SITL ${{ matrix.px4_version }} (ubuntu-20.04)
+    runs-on: ubuntu-18.04
+    container: mavsdk/mavsdk-ubuntu-20.04-px4-sitl-${{ matrix.px4_version }}
+    strategy:
+      matrix:
+        px4_version: [v1.11]
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: test
+        run: PX4_VERSION=${{ matrix.px4_version }} tools/run-sitl-tests.sh /home/user/Firmware
