core: Add plugin access to system, unify libs
This adds the possibility to get plugins from a system like this:

mavsdk.systems()[0].action().takeoff()

This makes the Python interface based on pybind11 much easier because it
solves the ownership problems that we had because of having Mavsdk and
plugins separately instantiated.

This however means that we will have to unify the libraries, so create
one libmavsdk.so combining the core and the plugins.

--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -78,21 +78,26 @@ set_target_properties(integration_tests_runner
 
 target_link_libraries(integration_tests_runner
     mavsdk
-    mavsdk_telemetry
     mavsdk_action
+    mavsdk_calibration
+    mavsdk_camera
+    mavsdk_failure
+    mavsdk_follow_me
+    mavsdk_ftp
+    mavsdk_geofence
+    mavsdk_gimbal
+    mavsdk_info
+    mavsdk_log_files
+    mavsdk_manual_control
+    mavsdk_mavlink_passthrough
     mavsdk_mission
     mavsdk_mission_raw
+    mavsdk_mocap
     mavsdk_offboard
-    mavsdk_log_files
-    mavsdk_info
-    mavsdk_gimbal
-    mavsdk_follow_me
-    mavsdk_camera
-    mavsdk_calibration
-    mavsdk_geofence
     mavsdk_param
-    mavsdk_ftp
-    mavsdk_mavlink_passthrough
+    mavsdk_shell
+    mavsdk_telemetry
+    mavsdk_tune
     gtest
     gtest_main
     gmock
