--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -171,11 +171,13 @@ jobs:
     container: mavsdk/mavsdk-${{ matrix.container_name }}
     strategy:
       matrix:
-        container_name: [fedora-32, fedora-33]
+        container_name: [fedora-33]
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+      - name: install packages
+        run: dnf install -y perl-FindBin
       - name: configure
         run: cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_MAVSDK_SERVER=OFF -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_PREFIX=install -DWERROR=OFF  -j 2 -Bbuild/release -H.
       - name: build
